k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-service
  namespace: 10k
  labels:
    app: be
spec:
  selector:
    app: be
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
